# TaAI

./: .breakpoints  getembedding.py  interface.py  main.py  pyproject.toml  replit.nix  requirements.txt  testRag.py
Chroma/: chroma.sqlite3
