[tool.poetry]
package-mode = false
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
#python = ">=3.10.0,<3.13"
python = "^3.10.0"
langchain = "^0.2.15"
langchain-community = "^0.2.14"
langchain-openai = "^0.1.22"
streamlit = "^1.36.0"
PyPDF2 = "^3.0.1" 
#streamlit-chromadb-connection = "^1.0.5"
pathlib = "^1.0.1"
pdfminer = "^20191125"
pypdf = "^4.3.1"
protobuf = "^4.25.3"
pysqlite3-binary = "^0.5.3.post1"
#langchain-chroma = "^0.1.3"
chromadb = "^0.5.5"




[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"